Write Angular in emoji and response: -- When submit the emoji, the page jump to response page and rolling down to the aim place. -- Set panels in response make the page tidy. (Issue #5)

--- a/client/src/app/crisis/crisisHelp.component.css
+++ b/client/src/app/crisis/crisisHelp.component.css
@@ -12,7 +12,13 @@ h3{
 }
 
 body{
-    background-color: #FEFE7A;
+    background:none;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     border-radius: 25px;
+}
+
+
+
+[layout-gt-sm="row"] {
+    background-image: url("https://wallpaper.wiki/wp-content/uploads/2017/05/wallpaper.wiki-Ice-Desktop-Wallpapers-PIC-WPE007333.jpg");
 }
